src/css/style.css
/* font */
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Oswald', sans-serif;
}

html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}
.container {
  margin: auto;
  position: relative;
  max-width: 1800px;
}

/* ========================================= */
/* Navbar / Header Section */
.header{
  overflow: hidden;
  position: relative;
  padding: 25px 0 70px;
  background-color: #F1F1F1;
}
.nav {
  display: flex;
  font-size: 13px;
  padding: 20px;
}

.nav-container{
    width: 50%;
    display: flex;
    justify-content: center;
}
.nav-element-container{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  top:15px;
}
svg{
  overflow: visible;
}
.nav-element{
  position: relative;
  padding: 5px 10px;
  text-decoration: none;
  font-size: 13px;
  letter-spacing: 2px;
  color: #2d2828;
  text-transform: uppercase;
  font-weight: bold;
  font-weight: 500;
  transition: ease-in-out 0.3s font-size;
}
.nav-element:hover{
  color: #FCC121;
  font-size: 16px;
}

/* Social Icons */
.nav-element svg, .nav-element img{
  width: 16px;
  position: absolute;
  top: 0;
}

/* Background Effects */
.header .top-img{
  background-image: url("../media/head-top-light");
}
.header .bottom-img{
  position: absolute;
  bottom: -133px;
  z-index: 120;
  left: 0;
  background: url("../media/bottom-sep-white.svg") no-repeat;
  background-size: 100% 100%;
  height: 238px;
  width: 100%;
}


/* Logo Container */
.logo-container {
  display: flex;
  color: #FF428e;
}
.logo-container img { /* Logo */
  width: 132px;
}
.logo-container span{
  display: flex;
  justify-content: center;
  align-items: center;
}
.logo-text{
  position: relative;
  top: 15px;
  left: 15px;
  letter-spacing: 2px;
  font-size: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ================== */
/* Main Container */
.main{
  box-shadow: inset 0px 12em 6.5em 0em rgb(255 255 255);
  background: url("../media/backs.jpg") no-repeat;
  background-size: cover;
  z-index: 1000;
  min-height: 900px;
  display: flex;
  justify-content: center;
  position: relative;
  align-items: center;
}

.carousel-main{
  text-transform: uppercase;
  font-size: 75px;
  padding: 25px 40px;
  text-align: center;
  color: #1b1b1b;
  background-color: #ffde2a;
  max-width: 16em;
  min-height: 5.8em;
  transform: skewY(-5deg);
  border-top-left-radius: 2em;
  border-bottom-right-radius: 1.5em;
  display: flex;
  flex-wrap: wrap;
  width: 900px;
  max-height: 285px;
  margin: auto;
  position: relative;
  bottom: 155px;
}
.carousel-main * {
  width: 100%;
}

.carousel-desc{
  display: flex;
  justify-content: space-around;
  align-items: center;

}
.carousel-desc p {
  position: relative;
}

.carousel-desc span {
  font-size: 40px;
  margin: 5px 20px;
}

/* Buttons */
.carousel-buttons-container{
  display:flex;
  justify-content: center;
  align-items: center;
}

.carousel-buttons-container button {
  background-color: rgb(32, 32, 32);
  max-width: 80px;
  outline: none;
  border: none;
  min-height: 5px;
  box-shadow: none;
  margin: 50px 20px;
  cursor: pointer;
}
.carousel-button-active, .carousel-buttons-container button:hover{
  min-height: 8px !important;
  background-color: black;
}

/* Carousel Footer / Download Box */
.carousel-footer{
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  background: #e83e8c;
  color: white;
  text-decoration: none;
  top: 14.3em;
  left: 1em;
  font-size: 1.75rem;
  max-width: 500px;
  transition: 0.5s transform ease-in-out;
  cursor: pointer;
}
.carousel-footer > *{
  padding: 0.625em;
}
.carousel-footer a {
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
}
.carousel-footer img {
  width: 105px;
  margin-right: 20px;
}
.carousel-footer-content{
  text-transform: uppercase;
}

.carousel-footer.id-1{
  box-shadow: 0 0.625em 1.875em #e83e8c;
}

/* Footer Hovering Effects */
.carousel-footer:hover{
  transform: scale(1.08,1.08);
}

/* Image Effects */
.main .bottom-img{
  background-image: url("../media/bottom-sep2-white.svg");
  position: absolute;
  bottom: -11px;
  width: 100%;
  z-index: -1;
  height: 100px;
  left: 0;
}


/* Servers Section */
.servers{
  min-height: 1100px;
  background: white url("../media/bg-servers.png") no-repeat bottom;
  background-size: 100% 100%;
  width: 100%;
  z-index: 200;
  overflow: hidden;
  padding-bottom: 10em;
  padding-top: 10em;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: relative;
}

/* Section Text (Choose your server...)*/
.section-text{
  font-size: 60px;
  transform: skewY(-5deg);
  text-align: center;
}


.servers-container{
  display: flex;
  justify-content: space-around;
  transform: skewY(-5deg);
  align-items: center;
  margin: auto;
  margin-top: 100px;
  z-index: 1000000;
}
.server-element{
  width: 550px;
  height: 600px;
  margin: 10px 50px;
  position: relative;
  background-size: contain;
  transition: 0.4s transform ease-in-out, box-shadow 0.4s ease-in-out;
}
.server-element-button{
  background-color: #1B1B1B;
  padding: 20px;
  transform: scale(1.1,1.1);
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 32px;
  color: #FFFFFF;
}
.server-element-button img { /* Europe & America Images inside buttons*/
  width: 52px;
  height: 57px;
  margin-right: 30px;
}

.second{
  font-size: 20px;
  background: none !important;
}

.web-description-element{
  font-size: 30px;
  width: 40%;
  color: #202020;
}

#server-1{
  background-color: #464646;
  background-image: url("../media/bg-server-1.jpg");
}
#server-2{
  background-color: white;
  background-image: url("../media/bg-server-2.jpg");
}


/* Server Element Hover Effects*/
.server-element:hover{
  transform: scale(1.02,1.02);
  box-shadow: 0 0.625em 1.875em #1b1b1b;
}
.orange-poki-img{
  position: absolute;
  right: -16em;
  top: 2.5em;
  transform: rotate(40deg);
}

/* Bottom Effect */
.servers .bottom-img{
  background-image: url("../media/pattern-1.png");
  position: absolute;
  left: 0;
  width: 100%;
  height: 74px;
  bottom: -5px;
}

.text-1 *{
  color: #1B1B1B !important;
}

/* Video Container */
.videos-container{
  width: 100%;
  padding: 20px 25px;
  position: relative;
}

.videos-container .container{
  display: flex;
  justify-content: space-around;
}
.reveal{
  position: relative;
  transform: translateY(150px);
  opacity: 0;
  transition: 1s all ease;
}
.active{
  opacity: 1;
  transform: translateY(0);
}
.videos-container .container > * {
  width: 45%;
}

.reveal:last-child{
  transform: translateY(0px) !important;
}

.box-1{
  display: flex;
  justify-content: center;

}
.box-1 iframe {
  box-shadow: 9px 15px 10px rgb(0 0 0 / 40%);

}

.box-1 img {
  cursor: pointer;
  transition: 0.2s transform ease-in-out;
  transform: scale(1.15,1.15);
  max-width: 100%;
  max-height: 100%;

}
.box-1 img:hover {
  transform: scale(1.25,1.25);
}
.yt-vid-img {
  transform: scale(1,1) !important; 
  width: 700px;
  height: 500px !important;
}

.section-title{
  text-transform: uppercase;
  font-family: 'Bangers', cursive;
  font-size: 9.558528vh;
  color: white;
  text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.25);
  letter-spacing: 0.05em;
  position: relative;
}
.section-title p{
  font-size: 8.558528vh;
  font-family: 'Bangers', cursive;
  text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.25);

}

.section-description{
  font-size: 28px;
  margin-top: 25px;
  color: rgb(223, 222, 222);
  letter-spacing: 0.05em;
}

.videos-container .bottom-img {
  background-image: url("../media/pattern-2.png");
  position: absolute;
  bottom: -71px;
  width: 100%;
  height: 72px;
  left: 0;

}
.widget-mob{
  display: none;
  margin: 50px auto;
}

/* Button Types */
.danger{
  background-color: #DC1214;
  height: 139px !important;
  width: 40%;
}

/* Animation */
@keyframes ShowAn {
  from {
    opacity: 1;
  }
  to{
    opacity: 0;
    display: none;
  }
}

@keyframes HideAn {
  from {
    opacity: 0;
  }
  to{
    opacity: 1;
    display: flex;
  }
}

.hide_animation{
  animation: 0.4s forwards HideAn;
}

.show_animation{
  animation: 0.4s forwards ShowAn;
}

/* Media Query (Mobile Pov)*/
@media (max-width: 1262px){
  .servers-container{
    flex-direction: column;
  }
  .second .servers-container{
    flex-direction: column-reverse;
  }
  .second .servers-container > *{
    margin: 10px auto 40px;
    width: 95%;
  }
  .orange-poki-img {
    right: -13em;
    top: 33.5em;
  }


  /* Video Container (Mobile Pov) */
  .videos-container{
    padding: 20px !important;
  }
  .videos-container .container {
    flex-direction: column;
  }
  .videos-container .container > * {
    width: 100%;
    margin: 60px auto;
  }
}

@media (max-width: 800px){
  
  /* Discord Widget Mobile */
  .widget-pc{
    display: none;
  }
  .widget-mob{
    display: flex;
  }
  .main{
    flex-direction: column;
  }

  .carousel-main{
    display: none;
    max-width: 8em;
    position: static;
  }
  .carousel-footer{
    top: 13em;
  }
  .carousel-desc{
    flex-direction: column;
  }
  .carousel-main * {
    font-size: 30px !important;
  }

  /* Nav bar */
  .nav{
    flex-direction: column;
  }
  .nav-container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 10px auto;
  }
  .logo-text{
    display: none !important;
  }


  .orange-poki-img{
    display: none;
  }
}

@media (max-width: 500px){

  .seciton-title image{
    height: 20px;
    width: 20px;
  }
  .container{
    max-width: 95%;
    width: 95%;
  }
  .carousel-main{
    max-width: 4em;
  }
  .carousel-footer{
    top: 20em;
    left: 0em;
  }
  .carousel-main * {
    font-size: 20px !important;
  }
  .box-1 img{
    max-height: 200px;
  }
  
  /* Navbar */
  .nav-element-container{
    flex-direction: column;
  }

  /* Servers Section */
  .section-text{
    font-size: 25px;
  }
  .servers-container{
    width: 100%;
  }
  .server-element{
    width: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    height: 450px;
  }
  .orange-poki-img{
    display: none;
  }


  /*Videos Container*/
  .videos-container{
    padding: 10px 15px !important;
  }
  .videos-container img{
    width: 100%;
    height: auto;
  }
  .section-title{
    font-size: 25px !important;
    word-break: break-word;
  }
  .seciton-title p {
    font-size: 50px !important;
    word-break: break-word;
  }
  .section-description{
    font-size: 15px;
  }
  
}

.hide-element{
  display: none;
}

/* Comp */
.pr-2 {
  padding-right: 2rem;
} 
.pl-2 {
  padding-left: 2rem;
}


/* Container Colors */
.color-2{
  background-color: #1B1B1B ;
}
.color-4{
  background-color: #677BC1 ;
}

